# Star_Anchor_program

./: .gitignore  Anchor.toml  Cargo.toml  E2E_VALIDATION_RESULTS.md  INSTRUCTIONS.md  INTEGRATION_SETUP.md  README.md  TEST_REPORT.md  TEST_RESULTS.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
patches/carbon-core/: .cargo_vcs_info.json  Cargo.toml
patches/carbon-core/src/: datasource.rs
patches/carbon-meteora-damm-v2-decoder/: .cargo_vcs_info.json  Cargo.toml
patches/carbon-meteora-damm-v2-decoder/src/: lib.rs
patches/solana-account-decoder/: .cargo_vcs_info.json  Cargo.toml
programs/honorary_quote_fee/: Cargo.toml  README.md  build.rs
programs/honorary_quote_fee/src/: cp_amm.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs  streamflow_utils.rs  tests.rs
scripts/: start-validator.sh  test-runner.sh
tests/: honorary_quote_fee.ts  validate_e2e.js
tests/helpers/: cp_amm_helper.ts  setup.ts  streamflow_helper.ts
