[workspace]
members = [
  "programs/honorary_quote_fee"
]
resolver = "2"

[patch.crates-io]
carbon-meteora-damm-v2-decoder = { path = "patches/carbon-meteora-damm-v2-decoder" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
