[package]
name = "honorary_quote_fee"
version = "0.1.0"
description = "Honorary quote-only fee position for DAMM v2 with 24h distribution crank"
edition = "2021"

[lib]
name = "honorary_quote_fee"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
