[package]
name = "honorary_quote_fee"
version = "0.1.0"
description = "Honorary quote-only fee position for DAMM v2 with 24h distribution crank"
edition = "2021"
build = "build.rs"

[lib]
name = "honorary_quote_fee"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
streamflow-sdk = { version = "0.10.0", features = ["cpi"] }
borsh = { version = "1.5.0", features = ["derive"] }
carbon-meteora-damm-v2-decoder = "0.10.0"
getrandom = { version = "0.3.3", default-features = false }
